--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
   "name": "afipapi",
-  "version": "0.5.0",
+  "version": "0.6.0",
   "dependencies": {
     "body-parser": "^1.15.2",
     "cors": "*",
     "express": "^4.13.4",
-    "lodash": "4.12.0",
+    "lodash": "^4.17.11",
     "moment": "^2.13.0",
     "ntp-client": "^0.5.3",
-    "soap": "^0.14.0",
+    "soap": "^0.25.0",
+    "ursa-purejs": "0.0.3",
     "xml2js": "^0.4.16"
   },
   "engines": {
@@ -16,10 +17,11 @@
     "npm": ">=2.0.0"
   },
   "scripts": {
-    "start": "server.js",
+    "start": "afip.js",
     "debug": "nodemon --inspect=5858 server.js"
   },
   "devDependencies": {
     "nodemon": "1.14.11"
-  }
+  },
+  "main": "afip.js"
 }
